--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
 
   &__top {
-    width: 100%;
     display: flex;
     justify-content: center;
     padding-bottom: $spacer * 4;
@@ -20,11 +19,9 @@
 
   &__top-content {
     display: flex;
-    width: 100%;
     flex-direction: column;
     justify-content: space-between;
     gap: $spacer * 3;
-    max-width: 100%;
   }
 
   &__logo {
@@ -53,6 +50,9 @@
 
   &__social-media-link {
     outline: none;
+    &:hover svg path {
+      fill: $neutral-70;
+    }
   }
 
   &__menu {
@@ -97,7 +97,6 @@
   }
 
   &__middle {
-    width: 100%;
     display: flex;
     justify-content: center;
     padding-top: $spacer * 2.5;
@@ -106,7 +105,6 @@
   }
 
   &__middle-content {
-    width: 100%;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -122,7 +120,6 @@
 
   &__middle-subscribe {
     display: flex;
-    width: 100%;
     gap: calc($spacer / 2);
   }
 
@@ -169,7 +166,6 @@
   }
 
   &__bottom {
-    width: 100%;
     padding-top: rem(30);
     padding-bottom: 0;
 
@@ -179,7 +175,6 @@
   }
 
   &__bottom-content {
-    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
