--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
@@ -46,4 +46,8 @@
     {{ end }}
 
   {{ end }}
+
+
+  <!--Hubspot forms-->
+  <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 </head>
