--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/case-study.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/case-study.html
@@ -3,7 +3,9 @@
     <img class="case-study__logo" src="{{ .Params.caseStudy.logo.src }}" alt="{{ .Params.caseStudy.logo.alt }}" />
     <h5 class="case-study__title">{{ .Params.caseStudy.title }}</h5>
     <p class="case-study__description">{{ .Params.caseStudy.description }}</p>
-    <a class="link link_md link_light" href="{{ .Params.caseStudy.link.url }}">{{ .Params.caseStudy.link.text }}</a>
+    <div class="case-study__link">
+      <a class="link link_md link_light" href="{{ .Params.caseStudy.link.url }}">{{ .Params.caseStudy.link.text }}</a>
+    </div>
   </div>
   <div class="case-study__preview">
     <img
