--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_footer.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
 
   &__top {
-    width: 100%;
     display: flex;
     justify-content: center;
     padding-bottom: $spacer * 4;
@@ -20,11 +19,9 @@
 
   &__top-content {
     display: flex;
-    width: 100%;
     flex-direction: column;
     justify-content: space-between;
     gap: $spacer * 3;
-    max-width: 100%;
   }
 
   &__logo {
@@ -53,6 +50,9 @@
 
   &__social-media-link {
     outline: none;
+    &:hover svg path {
+      fill: $neutral-70;
+    }
   }
 
   &__menu {
@@ -97,16 +97,12 @@
   }
 
   &__middle {
-    width: 100%;
-    display: flex;
-    justify-content: center;
     padding-top: $spacer * 2.5;
     padding-bottom: $spacer * 2.5;
     border-bottom: 1px solid $neutral-20;
   }
 
   &__middle-content {
-    width: 100%;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -118,39 +114,6 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-  }
-
-  &__middle-subscribe {
-    display: flex;
-    width: 100%;
-    gap: calc($spacer / 2);
-  }
-
-  &__middle-subscribe input {
-    background-color: transparent;
-    padding-top: calc($spacer / 2);
-    padding-bottom: calc($spacer / 2);
-    border: 1px solid $neutral-40;
-    padding-left: $spacer;
-    padding-right: $spacer;
-    border-radius: 8px;
-    max-height: rem(40);
-    width: 100%;
-    outline: none;
-    color: $neutral-98;
-  }
-
-  &__middle-subscribe input::placeholder {
-    color: $neutral-70;
-  }
-
-  &__middle-subscribe a {
-    max-height: rem(40);
-    padding-left: rem(22);
-    padding-right: rem(22);
-
-    font-size: map-get($font-sizes-text, 'md');
-    line-height: rem(24);
   }
 
   &__middle-title {
@@ -223,23 +186,9 @@
       gap: 0;
     }
 
-    &__middle-content {
-      padding: 0;
-      flex-direction: row;
-      align-items: center;
-    }
-
     &__middle-newsletter {
       max-width: rem(350);
-    }
-
-    &__middle-subscribe {
       justify-content: flex-end;
-    }
-
-    &__middle-subscribe input {
-      min-width: rem(414);
-      width: auto;
     }
 
     &__bottom {
@@ -252,3 +201,5 @@
     }
   }
 }
+
+@import 'subscribe-form';
