--- a/qdrant-landing/themes/qdrant-2024/assets/css/_cookit.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_cookit.scss
@@ -1,4 +1,4 @@
-@import "components/buttons";
+@import 'components/buttons';
 
 body {
   margin: 0;
@@ -8,7 +8,7 @@ body {
   position: fixed;
   width: 100%;
   bottom: 0;
-  padding: .6rem 2rem;
+  padding: 0.6rem 2rem;
   display: flex;
   z-index: 999;
 }
@@ -25,7 +25,7 @@ body {
 }
 
 #cookit #cookit-container > * {
-  margin: .4rem;
+  margin: 0.4rem;
 }
 
 #cookit #cookit-container p {
