--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -54,6 +54,7 @@
 @import 'partials/investors';
 @import 'partials/mission';
 @import 'partials/our-story';
+@import 'partials/hubspot-form';
 @import 'partials/contact-hero';
 @import 'partials/contact-form';
 @import 'partials/use-cases-vector-hero';
