--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="footer__middle-newsletter col-12 col-lg-8">
-          {{ partial "hubspot-form.html" (dict "hubspotFormOptions" .Params.hubspotFormOptions "id" "footer-subscribe-form") }}
+          {{ partial "hubspot-form.html" (dict "hubspotFormOptions" .Params.hubspotFormOptions "id" "footer-subscribe-form" "context" . ) }}
         </div>
       </div>
     </div>
