--- a/qdrant-landing/themes/qdrant-2024/assets/css/components/_input.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/components/_input.scss
@@ -1,6 +1,6 @@
 @use '../helpers/functions' as *;
 
-input.input, textarea.input, select.input {
+.inputt {
   // VARIABLES
   $height: (
     md: $spacer * 2.5,
