--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/contact-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/contact-hero.html
@@ -27,50 +27,9 @@
       </div>
 
       <div class="contact-hero__form">
-        {{ partial "contact-form" . }}
+        {{ partial "contact-form" .Params.form }}
       </div>
+
     </div>
-
-    <div class="contact-hero__content">
-      <div class="contact-hero__info">
-        {{ if .Params.salesTitle }}
-        <h4 class="contact-hero__sales-title">{{ .Params.salesTitle }}</h4>
-        {{ else }}
-        <h3 class="contact-hero__title">{{ .Params.title }}</h3>
-        {{ end }}
-        <p class="contact-hero__description">{{ .Params.description }}</p>
-
-        {{ range .Params.cards }}
-        <div class="contact-hero__card">
-          <img src="{{ .icon }}" alt="{{ .title }}" />
-          <h6 class="contact-hero__card-title">{{ .title }}</h6>
-          <p class="contact-hero__card-description">{{ .description }}</p>
-          {{ if .link }}
-          <a class="contact-hero__card-link link link_sm" href="{{ .link.href }}">{{ .link.text }}</a>
-          {{ end }}
-          {{ if .mailLink }}
-          <a class="contact-hero__card-link-mail link link_sm" href="mailto:{{ .mailLink.href }}">
-            {{ .mailLink.text }}
-          </a>
-          {{ end }}
-        </div>
-        {{ end }}
-      </div>
-
-
-      <div class="contact-hero__form">
-        <div class="contact-form">
-          <h6 class="contact-form__title">Talk to our Team</h6>
-          <div class="contact-form__top-overlay"></div>
-          {{ partial "hubspot-form" (dict "id" "contact-us-form" "hubspotFormOptions" .Params.hubspotFormOptions "context" . "classes" "contact-hero__form") }}
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
   </div>
 </section>
