error messages fixes

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_contact-form.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_contact-form.scss
@@ -69,6 +69,12 @@
     margin-top: $spacer * 4;
   }
 
+  .hs_error_rollup {
+    position: absolute;
+    bottom: -20px;
+    right: 0;
+  }
+
   &__top-overlay {
     position: absolute;
     right: 0;
