--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hubspot-form.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hubspot-form.scss
@@ -1,6 +1,7 @@
 @use '../helpers/functions' as *;
 
 form.hs-form {
+  position: relative;
   & > fieldset {
     min-width: 100%;
     margin-bottom: rem(20);
@@ -129,4 +130,5 @@ form.hs-form {
   color: $success-90;
   font-size: map-get($font-sizes-text, 'md');
   line-height: rem(24);
+  text-align: right;
 }
