--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/contact-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/contact-hero.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="contact-hero__form">
-        {{ partial "contact-form" . }}
+        {{ partial "contact-form" .Params.form }}
       </div>
     </div>
   </div>
