single page default layout, article content partial, table

--- a/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
@@ -3,6 +3,9 @@
   {{- partial "head.html" . -}}
   <body>
     <main>
+      {{ if (eq .Params.type "external-link") }}
+        Redirecting to <a href="{{ .Params.external_url }}">external page</a>...
+      {{ end }}
       {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer" . }}
