--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
@@ -48,12 +48,7 @@
       </div>
 
       <div class="qdrant-post__content">
-        {{ $reAltTitleIn := "<img src=\"([^\"]+)\" alt=\"([^\"]*)\" title=\"([^\"]+)\">" }}
-        {{ $reAltTitleOut := "<figure><img src=\"$1\" alt=\"$2\" title=\"$3\"><figcaption>$3</figcaption></figure>" }}
-        {{ $contentWithImgCaptures := .Content | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
-
-        {{ $wrappedTable := printf "<div class=table-responsive> ${1} </div>" }}
-        {{ $contentWithImgCaptures | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
+        {{ partial "article-content" . }}
       </div>
     </div>
   </div>
