--- a/qdrant-landing/themes/qdrant-2024/layouts/_default/single.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/_default/single.html
@@ -7,9 +7,9 @@
 
   <div class="container my-5">
     <div class="qdrant-post">
-      <div class="qdrant-post__content">
+      <article class="qdrant-post__content">
         {{ partial "article-content" . }}
-      </div>
+      </article>
     </div>
   </div>
 {{ end }}
