--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
@@ -1,5 +1,5 @@
 <section class="qdrant-post">
-  <div class="container">
+  <article class="container">
     <div class="qdrant-post__header">
       <h2 class="qdrant-post__title">{{ .Params.title }}</h2>
       <div class="qdrant-post__about">
@@ -16,7 +16,7 @@
     </div>
 
     <div class="qdrant-post__body">
-      <div class="qdrant-post__social">
+      <section class="qdrant-post__social">
         <p class="qdrant-post__social-title">Share</p>
         <div class="qdrant-post__social-links">
           <a href="/">
@@ -45,16 +45,11 @@
             </svg>
           </a>
         </div>
-      </div>
+      </section>
 
       <div class="qdrant-post__content">
-        {{ $reAltTitleIn := "<img src=\"([^\"]+)\" alt=\"([^\"]*)\" title=\"([^\"]+)\">" }}
-        {{ $reAltTitleOut := "<figure><img src=\"$1\" alt=\"$2\" title=\"$3\"><figcaption>$3</figcaption></figure>" }}
-        {{ $contentWithImgCaptures := .Content | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
-
-        {{ $wrappedTable := printf "<div class=table-responsive> ${1} </div>" }}
-        {{ $contentWithImgCaptures | replaceRE "(<table>(?:.|\n)+?</table>)" $wrappedTable | safeHTML }}
+        {{ partial "article-content" . }}
       </div>
     </div>
-  </div>
+  </article>
 </section>
