--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -66,3 +66,4 @@
 @import 'partials/retrieval-augmented-generation-integrations';
 @import 'partials/retrieval-augmented-generation-evaluation';
 @import 'partials/data-analysis-anomaly-detection';
+@import 'partials/docs-menu';
