code copy button and highlight styles

--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -2,7 +2,7 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
-@import "syntax-highlight";
+@import 'syntax-highlight';
 @import 'components';
 @import 'partials/logo';
 @import 'partials/top-banner';
