--- a/qdrant-landing/themes/qdrant-2024/assets/css/_bootstrap-custom.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_bootstrap-custom.scss
@@ -19,6 +19,7 @@
 @import 'bootstrap/scss/transitions';
 @import 'bootstrap/scss/dropdown';
 @import 'bootstrap/scss/button-group';
+@import 'bootstrap/scss/popover';
 
 // Helpers
 @import 'bootstrap/scss/helpers';
